--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,18 @@
 	<properties>
 		<docker.image.prefix>kammana</docker.image.prefix>
 	</properties>	
+	<build>
+	    <plugins>
+	        <plugin>
+	            <artifactId>maven-compiler-plugin</artifactId>
+	            <version>3.5.1</version>
+	            <configuration>
+	                <source>1.8</source>
+	                <target>1.8</target>
+	            </configuration>
+	        </plugin>
+	    </plugins>
+	</build>
 	<dependencies>
 		<dependency>
 		    <groupId>com.oracle.bedrock</groupId>
