--- a/pom.xml
+++ b/pom.xml
@@ -23,8 +23,8 @@
 	                <target>1.8</target>
 	            </configuration>
 	        </plugin>
-	    </plugins> -->
-	</build>
+	    </plugins>
+	</build> -->
 	<dependencies>
 		<dependency>
 		    <groupId>com.oracle.bedrock</groupId>
